# PSGC

./: ARCHITECTURE.md  Cargo.toml  README.md
crates/psgc/: Cargo.toml
crates/psgc/src/: lib.rs  metadata.rs
crates/psgc/src/codegen/: mod.rs  wgsl_codegen.rs
crates/shader_tests/: Cargo.toml
crates/shader_tests/src/: lib.rs
crates/wgsl_std/: Cargo.toml
crates/wgsl_std/src/: lib.rs
crates/wgsl_std/src/shader/nodes/: color.rs  input.rs  math.rs  mod.rs  output.rs  texture.rs  vector.rs
src/: compiler.rs  metadata.rs
