[package]
name = "wgsl_std"
version = "0.1.0"
edition = "2021"
authors = ["Pulsar Team"]
description = "Standard WGSL shader node library for PSGC"
license = "MIT"

[dependencies]
# For distributed node registry
linkme = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"

# Re-export graphy types
graphy = { path = "../../../Graphy" }

[dev-dependencies]
tracing-subscriber = "0.3"
